--- a/platformio.ini
+++ b/platformio.ini
@@ -4,22 +4,8 @@ lib_deps =
     LiquidCrystal_I2C@1.1.4
     ESP8266_SSD1306@4.0.0
     ESP Async WebServer@1.2.0
-display = 1 ; 0 for 20x4 Liquid Display - 1 for OLED Display
-display_address = 0x3C ; 0x27 default LCD - 0x3C default OLED Display
+display_address = 0x27 ; 0x27 default LCD - 0x3C default OLED Display
 
-
-[env:esp8266]
-platform = espressif8266
-board = nodemcuv2
-framework = arduino
-monitor_speed = 115200
-build_flags = 
-    -DDIGITRANSIT_DISPLAY=${common.display} 
-    -DDIGITRANSIT_DISPLAY_ADDRESS=${common.display_address} 
-    -DNODE_MCU_ESP8266
-lib_deps = 
-    ${common.lib_deps}
-    AsyncTCP@1.0.3
 
 [env:esp32]
 platform = espressif32
@@ -27,7 +13,6 @@ board = esp32dev
 framework = arduino
 monitor_speed = 115200
 build_flags = 
-    -DDIGITRANSIT_DISPLAY=${common.display} 
     -DDIGITRANSIT_DISPLAY_ADDRESS=${common.display_address} 
     -DNODE_MCU_ESP32
 lib_deps = 
