--- a/platformio.ini
+++ b/platformio.ini
@@ -2,8 +2,8 @@
 lib_deps = 
     ArduinoJson@5.13.4
     LiquidCrystal_I2C@1.1.4
-    ESP8266_SSD1306@4.0.0
     ESP Async WebServer@1.2.0
+    Time@1.6
 display_address = 0x27 ; 0x27 default LCD - 0x3C default OLED Display
 
 
